cargo-features = ["edition2021"]

[workspace]

members = [
    "agents/relayer",
    "agents/scraper",
    "agents/validator",
    "chains/hyperlane-cosmos",
    "chains/hyperlane-ethereum",
    "chains/hyperlane-fuel",
    "ethers-prometheus",
    "hyperlane-base",
    "hyperlane-core",
    "hyperlane-test",
    "utils/abigen",
    "utils/backtrace-oneline",
    "utils/hex",
    "utils/run-locally",
]

[workspace.package]
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../LICENSE.md"
publish = false
version = "0.1.0"

[workspace.dependencies]
async-trait = { version = "0.1" }
color-eyre = { version = "0.6" }
config = "~0.13.3"
cosmrs = { version = "0.14", default-features = false, features = ["cosmwasm", "rpc", "tokio", "grpc"] }
derive-new = "0.5"
derive_more = "0.99"
enum_dispatch = "0.3"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01" }
ethers-contract = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01", features = ["legacy"] }
ethers-core = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01" }
ethers-providers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01" }
ethers-signers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01", features = ["aws"] }
eyre = "0.6"
fuels = "0.38"
fuels-code-gen = "0.38"
futures = "0.3"
futures-util = "0.3"
itertools = "0.10"
num = {version = "0.4"}
num-derive = "0.3"
num-traits = "0.2"
paste = "1.0"
prometheus = "0.13"
reqwest = "0.11"
rocksdb = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.3"
sha256 = "1.1.4"
bech32 = "0.9.1"
tonic = "0.9.2"
sha2 = { version = "0.10.6", default-features = false }
ripemd = "0.1.3"
hyper = "0.14"
hyper-tls = "0.5.0"
hex = "0.4.3"
tendermint-rpc = { version = "0.32.0", features = ["http-client", "tokio"]}
